today's fisrt commit

--- a/empresa/empresa.html
+++ b/empresa/empresa.html
@@ -25,40 +25,41 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-sm-12 col-lg-12 col-xs-12 col-md-12 text-center pb-5 pt-5" style="background-color: white;">
-                <img src="logo1.png" width="190px" height="190px" style="border-radius: 120px">
+        <div class="grupo pl-3 pr-3">
+            <div class="row">
+                <div class="col-sm-12 col-lg-12 col-xs-12 col-md-12 text-center pb-5 pt-5" style="background-color: white;">
+                    <img src="logo1.png" width="190px" height="190px" style="border-radius: 120px">
+                </div>
+            </div>
+
+            <div class="row pb-4 pl-2" style="background-color: white;">
+                <div class="col-sm-12 col-lg-12 col-xs-12 col-md-12">
+                    <i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
+                    Rua H-20, 10 B - Parque Shalon, São Luís - MA, CEP: 65485-000
+                </div>
+            </div>
+        
+            <div class="row pb-4 pl-2 mb-5" style="background-color: white;">
+                <div class="col-sm-12 col-lg-12 col-xs-12 col-md-12">
+                    <i class="fa fa-info-circle fa-2x" aria-hidden="true"></i>
+                    Frigorífico
+                </div>
+            </div>
+
+            <div class="row mb-4 mt-3 ldz pl-2" style="background-color: white; margin-top: 5px;">
+                <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 text-center p-3">
+                    <i class="fa fa-phone fa-2x" aria-hidden="true" style="float: left;"></i>
+                    Telefone
+                </div>
+            </div> 
+
+            <div class="row ldz pl-2" style="background-color: white; padding: 0.1rem;">
+                <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 text-center p-3">
+                    <i class="fa fa-globe fa-2x" aria-hidden="true" style="float: left;"></i>
+                        Site
+                </div>
             </div>
         </div>
-
-        <div class="row pb-4 pl-2" style="background-color: white;">
-            <div class="col-sm-12 col-lg-12 col-xs-12 col-md-12">
-                <i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
-                Rua H-20, 10 B - Parque Shalon, São Luís - MA, CEP: 65485-000
-            </div>
-        </div>
-       
-        <div class="row pb-4 pl-2 mb-5" style="background-color: white;">
-            <div class="col-sm-12 col-lg-12 col-xs-12 col-md-12">
-                <i class="fa fa-info-circle fa-2x" aria-hidden="true"></i>
-                Frigorífico
-            </div>
-        </div>
-
-        <div class="row mb-4 mt-3 ldz pl-2" style="background-color: white; margin-top: 5px;">
-            <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 text-center p-3">
-                <i class="fa fa-phone fa-2x" aria-hidden="true" style="float: left;"></i>
-                Telefone
-            </div>
-        </div> 
-
-        <div class="row ldz pl-2" style="background-color: white; padding: 0.1rem;">
-            <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 text-center p-3">
-                <i class="fa fa-globe fa-2x" aria-hidden="true" style="float: left;"></i>
-                    Site
-            </div>
-        </div>
-
 
         <footer class="row text-center mt-4" style="background-color: gray;">
             <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
