--- a/empresa/index2.html
+++ b/empresa/index2.html
@@ -14,26 +14,52 @@
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
     <style>
-        header {
-            background-color: #fef1af;
+        * {
+            font-family: 'Open Sans', Arial, sans-serif;
         }
 
         a {
             color: black;
+            font-size: 18px;
         }
 
         a:hover {
             text-decoration: none;
+            color: black;
+        }
+
+        .meio {
+            background-color: #fbcc3b;
+        }
+
+        .textoPrato {
+            font-size: 1.3rem;
+            margin: auto;
+        }
+
+        .redeSocial {
+            background-color: gray;
+        }
+
+        footer {
+            background-color: #fff9af;
         }
     </style>
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fluid">
+        <div class="row redeSocial">
+            <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12" style="padding: 0;">
+                &nbsp;
+            </div>
+        </div>
         <header class="row">
-            <div class="cols-sm-12 col-xs-12 col-md-12 col-lg-12">
+            <div class="cols-sm-12 col-xs-12 col-md-12 col-lg-12" style="padding: 0px;">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand" href="#">Navbar</a>
+                    <a class="navbar-brand" href="#">
+                        <img src="logo2.png" alt="" width="150px">
+                    </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -53,8 +79,8 @@
                                 <a class="nav-link" href="#">Localização</a>
                             </li>
                             <li class="nav-item">
-                                    <a class="nav-link" href="#">Sobre</a>
-                                </li>
+                                <a class="nav-link" href="#">Sobre</a>
+                            </li>
                             <li class="nav-item" style="display: none;">
                                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                             </li>
@@ -63,6 +89,105 @@
                 </nav>
             </div>
         </header>
+        <div class="row meio">
+            <div class="col-sm-5 col-xs-5 col-md-5 col-lg-5">
+                <img src="meio.png" alt="">
+            </div>
+            <div class="col-sm-5 col-xs-5 col-md-5 col-lg-5" style="padding: 0.9rem">
+                <div class="textoPrato" style="width: 100%; text-align: justify; text-indent: 5%">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit ipsum sit quam animi facere est aut
+                    quisquam reiciendis. Ex tempora delectus nam necessitatibus, vel enim rerum. Voluptas quisquam rerum
+                    ex.
+                </div>
+            </div>
+        </div>
+        <div class="row slide" style="max-height: 500px !important;">
+            <div class="col-sm-12 col-xs-12 col-md-12" style="padding: 0 !important; max-height: 500px !important;">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner" style="max-height: 500px !important;">
+                        <div class="carousel-item active" style="max-height: 500px !important;">
+                            <img src="banner1.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item" style="max-height: 500px !important;">
+                            <img src="banner2.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item" style="max-height: 500px !important;">
+                            <img src="banner3.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="row mb-4" style="">
+            <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 mb-3 mt-2" style="">
+                <span style="font-size: 1.5rem;" class="badge badge-warning">Produtos</span>
+            </div>
+            <div class="col-sm-3 col-md-3 col-xs-3 col-lg-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://www.galaxcms.com.br/imgs_crud_comum/1826/Ovos---Tipo-Jumbo-20181127233219_400.jpg"
+                        class="card-img-top" alt="..." height="200px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3 col-md-3 col-xs-3 col-lg-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://www.galaxcms.com.br/imgs_crud_comum/1826/Ovos---Tipo-Jumbo-20181127233219_400.jpg"
+                        class="card-img-top" alt="..." height="200px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3 col-md-3 col-xs-3 col-lg-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://www.galaxcms.com.br/imgs_crud_comum/1826/Ovos---Tipo-Jumbo-20181127233219_400.jpg"
+                        class="card-img-top" alt="..." height="200px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3 col-md-3 col-xs-3 col-lg-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://www.galaxcms.com.br/imgs_crud_comum/1826/Ovos---Tipo-Jumbo-20181127233219_400.jpg"
+                        class="card-img-top" alt="..." height="200px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <footer class="row">
+            <div class="col-sm-5 col-md-5 col-lg-5 col-xs-5" style="max-height: 140px; padding: 0px;">
+                <img src="cartelap.png" height="140px" alt="">
+            </div>
+        </footer>
     </div>
 </body>
 
