--- a/empresa/index.html
+++ b/empresa/index.html
@@ -5,100 +5,189 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Início</title>
-    <link rel="stylesheet" href="index.css">
+    <title>Home</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/jquery-3.4.1.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="assets/fontawesome/css/font-awesome.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
-    <script>
-        setInterval(oculta, 3000);
-        function oculta() {
-            var preloader = document.querySelector('body #preloader');
-            preloader.style.display = 'none';
-        }
-    </script>
     <style>
-        .load {
-            width: 100px;
-            height: 100px;
-            position: absolute;
-            top: 30%;
-            left: 45%;
-            color: blue;
+        * {
+            font-family: 'Open Sans', Arial, sans-serif;
+        }
+
+        a {
+            color: black;
+            font-size: 18px;
+        }
+
+        a:hover {
+            text-decoration: none;
+            color: black;
+        }
+
+        .meio {
+            background-color: #fbcc3b;
+        }
+
+        .textoPrato {
+            font-size: 1.3rem;
+            margin: auto;
+        }
+
+        .redeSocial {
+            background-color: gray;
+        }
+
+        footer {
+            background-color: #fff9af;
         }
     </style>
 </head>
 
 <body>
     <div class="container-fluid">
+        <div class="row redeSocial">
+            <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12" style="padding: 0;">
+                &nbsp;
+            </div>
+        </div>
+        <header class="row">
+            <div class="cols-sm-12 col-xs-12 col-md-12 col-lg-12" style="padding: 0px;">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand" href="#">
+                        <img src="logo2.png" alt="" width="150px">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">Início<span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Produtos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Cartão Fidelidade</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Localização</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Sobre</a>
+                            </li>
+                            <li class="nav-item" style="display: none;">
+                                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <div class="row meio">
+            <div class="col-sm-5 col-xs-5 col-md-5 col-lg-5">
+                <img src="meio.png" alt="">
+            </div>
+            <div class="col-sm-5 col-xs-5 col-md-5 col-lg-5" style="padding: 0.9rem">
+                <div class="textoPrato" style="width: 100%; text-align: justify; text-indent: 5%">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit ipsum sit quam animi facere est aut
+                    quisquam reiciendis. Ex tempora delectus nam necessitatibus, vel enim rerum. Voluptas quisquam rerum
+                    ex.
+                </div>
+            </div>
+        </div>
+        <div class="row slide" style="max-height: 500px !important;">
+            <div class="col-sm-12 col-xs-12 col-md-12" style="padding: 0 !important; max-height: 500px !important;">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner" style="max-height: 500px !important;">
+                        <div class="carousel-item active" style="max-height: 500px !important;">
+                            <img src="banner1.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item" style="max-height: 500px !important;">
+                            <img src="banner2.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item" style="max-height: 500px !important;">
+                            <img src="banner3.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="row mb-4" style="">
+            <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 mb-3 mt-2" style="">
+                <span style="font-size: 1.5rem;" class="badge badge-warning">Produtos</span>
+            </div>
+            <div class="col-sm-3 col-md-3 col-xs-3 col-lg-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://www.galaxcms.com.br/imgs_crud_comum/1826/Ovos---Tipo-Jumbo-20181127233219_400.jpg"
+                        class="card-img-top" alt="..." height="200px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3 col-md-3 col-xs-3 col-lg-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://www.galaxcms.com.br/imgs_crud_comum/1826/Ovos---Tipo-Jumbo-20181127233219_400.jpg"
+                        class="card-img-top" alt="..." height="200px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3 col-md-3 col-xs-3 col-lg-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://www.galaxcms.com.br/imgs_crud_comum/1826/Ovos---Tipo-Jumbo-20181127233219_400.jpg"
+                        class="card-img-top" alt="..." height="200px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3 col-md-3 col-xs-3 col-lg-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://www.galaxcms.com.br/imgs_crud_comum/1826/Ovos---Tipo-Jumbo-20181127233219_400.jpg"
+                        class="card-img-top" alt="..." height="200px">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-        <div id="preloader">
-            <div class="inner">
-                <!-- HTML DA ANIMAÇÃO PRELOADER! -->
-                <div class="bolas">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                </div>
+
+
+        <footer class="row">
+            <div class="col-sm-5 col-md-5 col-lg-5 col-xs-5" style="max-height: 140px; padding: 0px;">
+                <img src="cartelap.png" height="140px" alt="">
             </div>
-        </div>
-        <div class="row flex justify-content-center align-items-center mb-4 mt-3">
-            <div class="col-sm-6 col-md-6 col-lg-6 flex" style="text-align: center;">
-                <img src="logo1.png" width="190px" height="190px" style="border-radius: 120px">
-            </div>
-        </div>
-        <div class="row flex align-items-center justify-content-center linha">
-            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mb-3 mr-2 ml-2 item">
-                <a href="empresa.html">
-                    <i class="fa fa-briefcase fa-5x" aria-hidden="true"></i>
-                    <p>Empresa</p>
-                </a>
-            </div>
-            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mb-3 mr-2 ml-2 item">
-                <a href="vendas.html">
-                    <i class="fa fa-truck fa-5x" aria-hidden="true"></i></br>
-                    <p>Vendas</p>
-                </a>
-            </div>
-            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mr-2 mb-3 ml-2 item">
-                <a href="pedidos.html">
-                    <i class="fa fa-whatsapp fa-5x" aria-hidden="true"></i></br>
-                    <p>Pedidos Online</p>
-                </a>
-            </div>
-            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mr-2 mb-3 ml-2 item">
-                <a href="localizacao.html">
-                    <i class="fa fa-map-marker fa-5x" aria-hidden="true"></i></br>
-                    <p>Localização</p>
-                </a>
-            </div>
-            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mb-3 mr-2 ml-2 item">
-                <i class="fa fa-credit-card truck fa-5x" aria-hidden="true"></i></br>
-                <p>Cartão fidelidade</p>
-            </div>
-            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mr-2 mb-3 ml-2 item">
-                <i class="fa fa-instagram fa-5x" aria-hidden="true"></i></br>
-                <p>Instagram</p>
-            </div>
-            <div class="col-sm-5 col-lg-5 col-md-5 btn btn-info mr-2 mb-3 ml-2 item">
-                <i class="fa fa-user fa-5x" aria-hidden="true"></i></br>
-                <p>Minha conta</p>
-            </div>
-            <div class="col-sm-5 col-lg-5 col-md-5 mr-2 mb-1 ml-2 ml-2">
-                <i class="fa fa-map-user fa-5x" aria-hidden="true"></i></br>
-            </div>
-        </div>
-        <div class="row rodape">
-            <footer>
-                <div class="col-sm-12 col-lg-12 col-md-12" id="teste">
-                    Empresa &copy | 2019
-                </div>
-            </footer>
-        </div>
+        </footer>
     </div>
 </body>
 
