--- a/empresa/index.html
+++ b/empresa/index.html
@@ -44,6 +44,15 @@
         footer {
             background-color: #fff9af;
         }
+
+        .card {
+            margin: auto !important;
+        }
+
+        .cartaoReceita{
+            margin: auto;
+            padding: 0.1rem;
+        }
     </style>
 </head>
 
@@ -132,8 +141,8 @@
             </div>
         </div>
         <div class="row mb-4" style="">
-            <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 mb-3 mt-2" style="">
-                <span style="font-size: 1.5rem;" class="badge badge-warning">Produtos</span>
+            <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 mb-2 text-center" style="padding: 0;">
+                <span style="font-size: 1.2rem; width: 100%;" class="badge badge-warning">Produtos</span>
             </div>
             <div class="col-sm-3 col-md-3 col-xs-3 col-lg-3">
                 <div class="card" style="width: 18rem;">
@@ -182,6 +191,37 @@
         </div>
 
 
+
+
+        <div class="row" style="background-color: #f9f9f9; border-top: 1px solid gray">
+            <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 mb-4 text-center" style="padding: 0; margin: 0;">
+                <span style="font-size: 1.2rem; width: 100%;" class="badge badge-info">Receitas</span>
+            </div>
+            <div class="col-sm-5 col-xs-5 col-lg-5 col-md-5 cartaoReceita mb-3" style="">
+                <div class="media">
+                    <img src="https://www.galaxcms.com.br/imgs_crud_comum/1826/Lorem-ipsum-dolor-sit-amet-co-20181129184622.jpg"
+                        class="mr-3" alt="..." height="150px" width="200px;">
+                    <div class="media-body">
+                        <h5 class="mt-0">Media heading</h5>
+                        Caldo de ovos
+                        <button type="button" class="btn btn-info">Ver mais</button>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-5 col-xs-5 col-lg-5 col-md-5 cartaoReceita mb-3" style="">
+                <div class="media">
+                    <img src="https://www.galaxcms.com.br/imgs_crud_comum/1826/Lorem-ipsum-dolor-sit-amet-co-20181129184622.jpg"
+                        class="mr-3" alt="..." height="150px" width="200px;">
+                    <div class="media-body">
+                        <h5 class="mt-0">Media heading</h5>
+                        Ovo à passarinha
+                        <button type="button" class="btn btn-info">Ver mais</button>
+
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <footer class="row">
             <div class="col-sm-5 col-md-5 col-lg-5 col-xs-5" style="max-height: 140px; padding: 0px;">
