--- a/empresa/index.html
+++ b/empresa/index.html
@@ -38,7 +38,20 @@
         }
 
         .redeSocial {
-            background-color: gray;
+            background-color: black;
+            color: white;
+        }
+
+        .redeSocial ul{
+            list-style-type: none;
+            margin-top: 5px;
+            margin-bottom: 5px;
+            float: right;
+        }
+
+        .redeSocial ul li{
+            float: left;
+            margin-right: 0.5rem;
         }
 
         footer {
@@ -49,7 +62,7 @@
             margin: auto !important;
         }
 
-        .cartaoReceita{
+        .cartaoReceita {
             margin: auto;
             padding: 0.1rem;
         }
@@ -60,7 +73,17 @@
     <div class="container-fluid">
         <div class="row redeSocial">
             <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12" style="padding: 0;">
-                &nbsp;
+                <ul>
+                    <li>
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </li>
+                    <li>
+                        <i class="fa fa-facebook-square" aria-hidden="true"></i>
+                    </li>
+                    <li>
+                        <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                    </li>
+                </ul>
             </div>
         </div>
         <header class="row">
@@ -120,13 +143,25 @@
                     </ol>
                     <div class="carousel-inner" style="max-height: 500px !important;">
                         <div class="carousel-item active" style="max-height: 500px !important;">
-                            <img src="banner1.png" class="d-block w-100" alt="...">
+                            <img src="granja.jpeg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Primeiro banner</h5>
+                                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                            </div>
                         </div>
                         <div class="carousel-item" style="max-height: 500px !important;">
-                            <img src="banner2.png" class="d-block w-100" alt="...">
+                            <img src="usina.jpeg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Segundo banner</h5>
+                                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                            </div>
                         </div>
                         <div class="carousel-item" style="max-height: 500px !important;">
-                            <img src="banner3.png" class="d-block w-100" alt="...">
+                            <img src="touro.jpeg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                    <h5>Terceiro banner</h5>
+                                    <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                                </div>
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -140,51 +175,48 @@
                 </div>
             </div>
         </div>
-        <div class="row mb-4" style="">
+        <div class="row mb-4 pb-2" style="">
             <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 mb-2 text-center" style="padding: 0;">
-                <span style="font-size: 1.2rem; width: 100%;" class="badge badge-warning">Produtos</span>
+                <span style="font-size: 1.2rem; width: 100%;" class="badge badge-dark">Produtos</span>
             </div>
             <div class="col-sm-3 col-md-3 col-xs-3 col-lg-3">
                 <div class="card" style="width: 18rem;">
                     <img src="https://www.galaxcms.com.br/imgs_crud_comum/1826/Ovos---Tipo-Jumbo-20181127233219_400.jpg"
                         class="card-img-top" alt="..." height="200px">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Ovos - Tipo Grande</h5>
+                        <p class="card-text">Ideais para revenda</p>
+                        <a href="#" class="btn btn-primary">Ver mais</a>
                     </div>
                 </div>
             </div>
             <div class="col-sm-3 col-md-3 col-xs-3 col-lg-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="https://www.galaxcms.com.br/imgs_crud_comum/1826/Ovos---Tipo-Jumbo-20181127233219_400.jpg"
-                        class="card-img-top" alt="..." height="200px">
+                    <img src="tipo-extra.png" class="card-img-top" alt="..." height="200px">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Ovos - Tipo Extra</h5>
+                        <p>Ideais para festas de fim de ano</p>
+                        <a href="#" class="btn btn-primary">Ver mais</a>
                     </div>
                 </div>
             </div>
             <div class="col-sm-3 col-md-3 col-xs-3 col-lg-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="https://www.galaxcms.com.br/imgs_crud_comum/1826/Ovos---Tipo-Jumbo-20181127233219_400.jpg"
-                        class="card-img-top" alt="..." height="200px">
+                    <img src="tipo-vermelho.jpg" class="card-img-top" alt="..." height="200px">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Ovos - Tipo Vermelho</h5>
+                        <p>Do tipo vermelho</p>
+                        <a href="#" class="btn btn-primary">Ver mais</a>
                     </div>
                 </div>
             </div>
             <div class="col-sm-3 col-md-3 col-xs-3 col-lg-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="https://www.galaxcms.com.br/imgs_crud_comum/1826/Ovos---Tipo-Jumbo-20181127233219_400.jpg"
-                        class="card-img-top" alt="..." height="200px">
+                    <img src="tipo-codorna.jpg" class="card-img-top" alt="..." height="200px">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Ovos - Codorna</h5>
+                        <p>Ideais para tira-gosto</p>
+                        <a href="#" class="btn btn-primary">Ver mais</a>
                     </div>
                 </div>
             </div>
