--- a/empresa/index.html
+++ b/empresa/index.html
@@ -13,60 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
-    <style>
-        * {
-            font-family: 'Open Sans', Arial, sans-serif;
-        }
-
-        a {
-            color: black;
-            font-size: 18px;
-        }
-
-        a:hover {
-            text-decoration: none;
-            color: black;
-        }
-
-        .meio {
-            background-color: #fbcc3b;
-        }
-
-        .textoPrato {
-            font-size: 1.3rem;
-            margin: auto;
-        }
-
-        .redeSocial {
-            background-color: black;
-            color: white;
-        }
-
-        .redeSocial ul{
-            list-style-type: none;
-            margin-top: 5px;
-            margin-bottom: 5px;
-            float: right;
-        }
-
-        .redeSocial ul li{
-            float: left;
-            margin-right: 0.5rem;
-        }
-
-        footer {
-            background-color: #fff9af;
-        }
-
-        .card {
-            margin: auto !important;
-        }
-
-        .cartaoReceita {
-            margin: auto;
-            padding: 0.1rem;
-        }
-    </style>
+    <link rel="stylesheet" href="assets/css/index.css">
 </head>
 
 <body>
