--- a/empresa/index.html
+++ b/empresa/index.html
@@ -106,9 +106,9 @@
                         <div class="carousel-item" style="max-height: 500px !important;">
                             <img src="assets/img/touro.jpeg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
-                                    <h5>Terceiro banner</h5>
-                                    <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                                </div>
+                                <h5>Terceiro banner</h5>
+                                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                            </div>
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -124,7 +124,8 @@
         </div>
         <div class="row mb-4 pb-2" style="">
             <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 mb-2 text-center" style="padding: 0;">
-                <span style="font-size: 1.2rem; width: 100%;" class="badge badge-dark">Produtos</span>
+                <span style="font-size: 1.2rem; width: 100%; border-radius: 0px; padding: 0.7rem;"
+                    class="badge badge-dark">Produtos</span>
             </div>
             <div class="col-sm-3 col-md-3 col-xs-3 col-lg-3 mb-2">
                 <div class="card" style="width: 18rem;">
@@ -133,7 +134,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Ovos - Tipo Grande</h5>
                         <p class="card-text">Ideais para revenda</p>
-                        <a href="#" class="btn btn-primary">Ver mais</a>
+                        <a href="#" class="btn btn-warning w-100">Ver mais</a>
                     </div>
                 </div>
             </div>
@@ -143,7 +144,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Ovos - Tipo Extra</h5>
                         <p>Ideais para festas de fim de ano</p>
-                        <a href="#" class="btn btn-primary">Ver mais</a>
+                        <a href="#" class="btn btn-warning w-100">Ver mais</a>
                     </div>
                 </div>
             </div>
@@ -153,7 +154,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Ovos - Tipo Vermelho</h5>
                         <p>Do tipo vermelho</p>
-                        <a href="#" class="btn btn-primary">Ver mais</a>
+                        <a href="#" class="btn btn-warning w-100">Ver mais</a>
                     </div>
                 </div>
             </div>
@@ -163,7 +164,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Ovos - Codorna</h5>
                         <p>Ideais para tira-gosto</p>
-                        <a href="#" class="btn btn-primary">Ver mais</a>
+                        <a href="#" class="btn btn-warning w-100">Ver mais</a>
                     </div>
                 </div>
             </div>
@@ -174,7 +175,8 @@
 
         <div class="row" style="background-color: #f9f9f9; border-top: 1px solid gray">
             <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 mb-4 text-center" style="padding: 0; margin: 0;">
-                <span style="font-size: 1.2rem; width: 100%;" class="badge badge-info">Receitas</span>
+                <span style="font-size: 1.2rem; width: 100%; border-radius: 0px; padding: 0.7rem;"
+                    class="badge badge-dark">Receitas</span>
             </div>
             <div class="col-sm-5 col-xs-5 col-lg-5 col-md-5 cartaoReceita mb-3" style="">
                 <div class="media">
@@ -182,21 +184,21 @@
                         class="mr-3" alt="..." height="150px" width="200px;">
                     <div class="media-body">
                         <h5 class="mt-0">Media heading</h5>
-                        Caldo de ovos
-                        <button type="button" class="btn btn-info">Ver mais</button>
-
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, fugiat numquam nam ducimus
+                        aliquid recusandae soluta porro sit...
+                        <button type="button" class="btn btn-warning w-100 mt-1">Ver mais</button>
                     </div>
                 </div>
             </div>
             <div class="col-sm-5 col-xs-5 col-lg-5 col-md-5 cartaoReceita mb-3" style="">
                 <div class="media">
-                    <img src="https://www.galaxcms.com.br/imgs_crud_comum/1826/Lorem-ipsum-dolor-sit-amet-co-20181129184622.jpg"
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcR9UTf9v_pSREySddIxG9tdTE8AE_yylVsR-lhf8vVCLgr3Be-y"
                         class="mr-3" alt="..." height="150px" width="200px;">
                     <div class="media-body">
                         <h5 class="mt-0">Media heading</h5>
-                        Ovo à passarinha
-                        <button type="button" class="btn btn-info">Ver mais</button>
-
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, fugiat numquam nam ducimus
+                        aliquid recusandae soluta porro sit...
+                        <button type="button" class="btn btn-warning w-100 mt-1">Ver mais</button>
                     </div>
                 </div>
             </div>
@@ -208,12 +210,14 @@
             </div>
             <div class="col-sm-7 col-md-7 col-lg-7 col-xs-7">
                 <div style="float: right; color: black;" class="p-5">
-                    <i class="fa fa-phone-square" aria-hidden="true"></i> (98) 3411-3192 | (98) 3551-9999 <br/>
+                    <i class="fa fa-phone-square" aria-hidden="true"></i> (98) 3411-3192 | (98) 3551-9999 <br />
                     <i class="fa fa-location-arrow" aria-hidden="true"></i> Rua 5, Bequimão - São Luís, MA
                 </div>
             </div>
-            <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12 p-2 text-center" style="background-color: black; color: gray;">
-                Copyright &copy; 2019 - Ovolar Distribuidora de Ovos - Desenvolvido por Nativo Sistemas - Criação de Sites
+            <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12 p-2 text-center"
+                style="background-color: black; color: gray;">
+                Copyright &copy; 2019 - Ovolar Distribuidora de Ovos - Desenvolvido por Nativo Sistemas - Criação de
+                Sites
             </div>
         </footer>
     </div>
