testando font quicksand

--- a/empresa/index.html
+++ b/empresa/index.html
@@ -125,7 +125,7 @@
         <div class="row mb-4 pb-2" style="">
             <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 mb-2 text-center" style="padding: 0;">
                 <span style="font-size: 1.2rem; width: 100%; border-radius: 0px; padding: 0.7rem;"
-                    class="badge badge-dark">Produtos</span>
+                    class="badge badge-dark quicksandbold">Produtos</span>
             </div>
             <div class="col-sm-3 col-md-3 col-xs-3 col-lg-3 mb-2">
                 <div class="card" style="width: 18rem;">
@@ -143,7 +143,7 @@
                     <img src="assets/img/tipo-extra.png" class="card-img-top" alt="..." height="200px">
                     <div class="card-body">
                         <h5 class="card-title">Ovos - Tipo Extra</h5>
-                        <p>Ideais para festas de fim de ano</p>
+                        <p>Ideais para comer no revéilon</p>
                         <a href="#" class="btn btn-warning w-100">Ver mais</a>
                     </div>
                 </div>
@@ -176,7 +176,7 @@
         <div class="row" style="background-color: #f9f9f9; border-top: 1px solid gray">
             <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 mb-4 text-center" style="padding: 0; margin: 0;">
                 <span style="font-size: 1.2rem; width: 100%; border-radius: 0px; padding: 0.7rem;"
-                    class="badge badge-dark">Receitas</span>
+                    class="badge badge-dark quicksandbold">Receitas</span>
             </div>
             <div class="col-sm-5 col-xs-5 col-lg-5 col-md-5 cartaoReceita mb-3" style="">
                 <div class="media">
