--- a/empresa/index.html
+++ b/empresa/index.html
@@ -5,8 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!-- SEO Geral-->
     <title>Início</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <meta name="description" content="A maior distribuidora de ovos do Maranhão. Há mais de 20 anos no mercado."> <!--Desrição e até 150 caracteres, mostrada na busca-->
+    <link rel="canonical" href="https://ovolar.com.br"> <!--Link único da página-->
+    <meta name="author" content="Ovo Lar"> <!--Nome do autor do site: quem o desenvolveu e o mantém-->
+    <meta name="robots" context="index, nofolllow">
+
+    <!--Google+ /Schema.org-->
+    <meta itemprop="name" content="Início | Ovolar"/>
+    <meta itemprop="description" content=""/> <!--Descrição da página em menos de 200 caracteres-->
+    <meta itemprop="image" content="https://www.google.com/imghp"/>
+
+    <!--Open Graph Facebook-->
+    <meta property="og:title" content="Ovolar Distribuidora"/> 
+    <meta property="og:description" content="A maior distribuidora de ovos do Maranhão. Há mais de 20 anos no mercado."/>
+    <meta property="og:url" content="https://emanoellucasml.github.io/empresa/index.html"/>
+    <meta property="og:site_name" content="Ovolar"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="https://www.google.com/imghp">
+ 
+
     <script src="assets/js/jquery-3.4.1.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="assets/fontawesome/css/font-awesome.min.css">
@@ -14,6 +35,7 @@
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="shortcut icon" href="assets/img/favicon.ico"/>
 </head>
 
 <body>
@@ -37,7 +59,7 @@
             <div class="cols-sm-12 col-xs-12 col-md-12 col-lg-12" style="padding: 0px;">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <a class="navbar-brand" href="#">
-                        <img src="assets/img/logo2.png" alt="" width="150px">
+                        <img src="assets/img/logo.png" alt="" width="150px">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
