adicao da animação

--- a/empresa/index.html
+++ b/empresa/index.html
@@ -9,24 +9,29 @@
     <!-- SEO Geral-->
     <title>Início</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <meta name="description" content="A maior distribuidora de ovos do Maranhão. Há mais de 20 anos no mercado."> <!--Desrição e até 150 caracteres, mostrada na busca-->
-    <link rel="canonical" href="https://ovolar.com.br"> <!--Link único da página-->
-    <meta name="author" content="Ovo Lar"> <!--Nome do autor do site: quem o desenvolveu e o mantém-->
+    <meta name="description" content="A maior distribuidora de ovos do Maranhão. Há mais de 20 anos no mercado.">
+    <!--Desrição e até 150 caracteres, mostrada na busca-->
+    <link rel="canonical" href="https://ovolar.com.br">
+    <!--Link único da página-->
+    <meta name="author" content="Ovo Lar">
+    <!--Nome do autor do site: quem o desenvolveu e o mantém-->
     <meta name="robots" context="index, nofolllow">
 
     <!--Google+ /Schema.org-->
-    <meta itemprop="name" content="Início | Ovolar"/>
-    <meta itemprop="description" content=""/> <!--Descrição da página em menos de 200 caracteres-->
-    <meta itemprop="image" content="https://www.google.com/imghp"/>
+    <meta itemprop="name" content="Início | Ovolar" />
+    <meta itemprop="description" content="" />
+    <!--Descrição da página em menos de 200 caracteres-->
+    <meta itemprop="image" content="https://www.google.com/imghp" />
 
     <!--Open Graph Facebook-->
-    <meta property="og:title" content="Ovolar Distribuidora"/> 
-    <meta property="og:description" content="A maior distribuidora de ovos do Maranhão. Há mais de 20 anos no mercado."/>
-    <meta property="og:url" content="https://emanoellucasml.github.io/empresa/index.html"/>
-    <meta property="og:site_name" content="Ovolar"/>
-    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Ovolar Distribuidora" />
+    <meta property="og:description"
+        content="A maior distribuidora de ovos do Maranhão. Há mais de 20 anos no mercado." />
+    <meta property="og:url" content="https://emanoellucasml.github.io/empresa/index.html" />
+    <meta property="og:site_name" content="Ovolar" />
+    <meta property="og:type" content="website" />
     <meta property="og:image" content="https://emanoellucasml.github.io/empresa/assets/img/logo.jpeg">
- 
+
 
     <script src="assets/js/jquery-3.4.1.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
@@ -35,11 +40,32 @@
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/index.css">
-    <link rel="shortcut icon" href="assets/img/favicon.ico"/>
+    <link rel="shortcut icon" href="assets/img/favicon.ico" />
+    <script>
+            setInterval(oculta, 1000);
+            function oculta()
+            {
+                $('#preloader').fadeOut(800);
+            }
+        </script>
 </head>
 
 <body>
     <div class="container-fluid">
+
+        <div id="preloader">
+            <div class="inner">
+                <!-- HTML DA ANIMAÇÃO PRELOADER! -->
+                <div class="bolas">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+        </div>
+
+
+
         <div class="row redeSocial">
             <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12" style="padding: 0;">
                 <ul>
