criação da página sobre e css

--- a/empresa/index.html
+++ b/empresa/index.html
@@ -40,14 +40,15 @@
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="assets/css/animacao.css">
     <link rel="shortcut icon" href="assets/img/favicon.ico" />
     <script>
-            setInterval(oculta, 1200);
+            setInterval(oculta, 500);
             function oculta()
             {
-                $('#preloader').fadeOut(100);
+                $('#preloader').fadeOut(1000);
             }
-        </script>
+    </script>
 </head>
 
 <body>
@@ -63,8 +64,6 @@
                 </div>
             </div>
         </div>
-
-
 
         <div class="row redeSocial">
             <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12" style="padding: 0;">
@@ -106,7 +105,7 @@
                                 <a class="nav-link" href="#">Localização</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Sobre</a>
+                                <a class="nav-link" href="sobre.html">Sobre</a>
                             </li>
                             <li class="nav-item" style="display: none;">
                                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
