consertando imagem opengraph facebook

--- a/empresa/index.html
+++ b/empresa/index.html
@@ -30,7 +30,7 @@
     <meta property="og:url" content="https://emanoellucasml.github.io/empresa/index.html" />
     <meta property="og:site_name" content="Ovolar" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://emanoellucasml.github.io/empresa/assets/img/logo.jpeg">
+    <meta property="og:image" content="https://emanoellucasml.github.io/empresa/assets/img/logo_opengraph.png">
 
 
     <script src="assets/js/jquery-3.4.1.min.js"></script>
