--- a/empresa/sobre.html
+++ b/empresa/sobre.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- SEO Geral-->
-    <title>Início</title>
+    <title>Sobre</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <meta name="description" content="A maior distribuidora de ovos do Maranhão. Há mais de 20 anos no mercado.">
     <!--Desrição e até 150 caracteres, mostrada na busca-->
@@ -30,7 +30,7 @@
     <meta property="og:url" content="https://emanoellucasml.github.io/empresa/index.html" />
     <meta property="og:site_name" content="Ovolar" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://emanoellucasml.github.io/empresa/assets/img/logo.jpeg">
+    <meta property="og:image" content="https://emanoellucasml.github.io/empresa/assets/img/logo_opengrahp.png">
 
 
     <script src="assets/js/jquery-3.4.1.min.js"></script>
@@ -114,6 +114,23 @@
                 </nav>
             </div>
         </header>
+        <footer class="row">
+            <div class="col-sm-5 col-md-5 col-lg-5 col-xs-5" style="max-height: 140px; padding: 0px;">
+                <img src="assets/img/cartelap.png" height="140px" alt="">
+            </div>
+            <div class="col-sm-7 col-md-7 col-lg-7 col-xs-7">
+                <div style="float: right; color: black;" class="p-5">
+                    <i class="fa fa-phone-square" aria-hidden="true"></i> (98) 3411-3192 | (98) 3551-9999 <br />
+                    <i class="fa fa-location-arrow" aria-hidden="true"></i> Rua 5, Bequimão - São Luís, MA
+                </div>
+            </div>
+            <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12 p-2 text-center"
+                style="background-color: black; color: gray;">
+                Copyright &copy; 2019 - Ovolar Distribuidora de Ovos - Desenvolvido por Nativo Sistemas - Criação de
+                Sites
+            </div>
+        </footer>
     </div>
 </body>
+
 </html>
