--- a/empresa/index.html
+++ b/empresa/index.html
@@ -231,9 +231,8 @@
                         class="mr-3" alt="..." height="150px" width="200px;">
                     <div class="media-body">
                         <h5 class="mt-0">Media heading</h5>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, fugiat numquam nam ducimus
-                        aliquid recusandae soluta porro sit...
-                        <button type="button" class="btn btn-warning w-100 mt-1">Ver mais</button>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, fugiat numquam nam ducimus aliquid recusandae sit...
+                        <button type="button" class="btn btn-warning w-100 mt-2">Ver mais</button>
                     </div>
                 </div>
             </div>
@@ -243,9 +242,8 @@
                         class="mr-3" alt="..." height="150px" width="200px;">
                     <div class="media-body">
                         <h5 class="mt-0">Media heading</h5>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, fugiat numquam nam ducimus
-                        aliquid recusandae soluta porro sit...
-                        <button type="button" class="btn btn-warning w-100 mt-1">Ver mais</button>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, fugiat numquam nam ducimus aliquid recusandae sit...
+                        <button type="button" class="btn btn-warning w-100 mt-2">Ver mais</button>
                     </div>
                 </div>
             </div>
