finalização da página sobre

--- a/empresa/index.html
+++ b/empresa/index.html
@@ -262,7 +262,7 @@
             <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12 p-2 text-center"
                 style="background-color: black; color: gray;">
                 Copyright &copy; 2019 - Ovolar Distribuidora de Ovos - Desenvolvido por Nativo Sistemas - Criação de
-                Sites
+                Sistemas
             </div>
         </footer>
     </div>
