--- a/empresa/sobre.html
+++ b/empresa/sobre.html
@@ -40,6 +40,7 @@
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="assets/css/sobre.css">
     <link rel="stylesheet" href="assets/css/animacao.css">
     <link rel="shortcut icon" href="assets/img/favicon.ico" />
     <script>
@@ -114,6 +115,34 @@
                 </nav>
             </div>
         </header>
+        <div class="row meio">
+            <div class="col-sm-12 col-lg-12 col-xs-12 col-md-12">
+                &nbsp;
+            </div>
+        </div>
+        <div class="row p-4">
+            <div class="col-sm-6 col-lg-6 col-xs-6 col-lg-6">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQl4sR6H3o49KitukvgHZ1sYqUUq4gjNNl8fJ--CyT_qi2CAfgI" alt="" width="100%" style="border-radius: 0.4rem;">
+            </div>
+            <div class="col-sm-6 col-lg-6 col-xs-6 col-lg-6">
+                <div class="textoSobre">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam repellendus aperiam hic possimus odio, laborum magnam id, ducimus, ad perferendis at. Voluptas illum tenetur id quaerat laboriosam odit rerum reiciendis.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae dolores atque quisquam nihil doloremque quam quo consequuntur corrupti, architecto, laboriosam qui numquam accusamus vitae placeat voluptate? Quisquam quibusdam voluptas voluptatum.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ipsum amet beatae! Repellat dolore nihil impedit laudantium vero, voluptatibus molestias minus cumque itaque neque architecto quas non numquam sequi quos
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row meio">
+                <div class="col-sm-12 col-lg-12 col-xs-12 col-md-12">
+                    &nbsp;
+                </div>
+            </div>
         <footer class="row">
             <div class="col-sm-5 col-md-5 col-lg-5 col-xs-5" style="max-height: 140px; padding: 0px;">
                 <img src="assets/img/cartelap.png" height="140px" alt="">
@@ -127,7 +156,7 @@
             <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12 p-2 text-center"
                 style="background-color: black; color: gray;">
                 Copyright &copy; 2019 - Ovolar Distribuidora de Ovos - Desenvolvido por Nativo Sistemas - Criação de
-                Sites
+                Sistemas
             </div>
         </footer>
     </div>
