linkagem das páginas

--- a/empresa/index.html
+++ b/empresa/index.html
@@ -102,7 +102,7 @@
                                 <a class="nav-link" href="#">Cartão Fidelidade</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Localização</a>
+                                <a class="nav-link" href="localizacao.html">Localização</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="sobre.html">Sobre</a>
