--- a/empresa/index.html
+++ b/empresa/index.html
@@ -174,7 +174,7 @@
                 <span style="font-size: 1.2rem; width: 100%; border-radius: 0px; padding: 0.7rem;"
                     class="badge badge-dark quicksandbold">Produtos</span>
             </div>
-            <div class="col-sm-3 col-md-3 col-xs-3 col-lg-3 mb-2">
+            <div class="col-sm-6 col-md-3 col-xs-3 col-lg-3 mb-2">
                 <div class="card" style="width: 18rem;">
                     <img src="https://www.galaxcms.com.br/imgs_crud_comum/1826/Ovos---Tipo-Jumbo-20181127233219_400.jpg"
                         class="card-img-top" alt="..." height="200px">
@@ -185,7 +185,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-3 col-md-3 col-xs-3 col-lg-3 mb-2">
+            <div class="col-sm-6 col-md-3 col-xs-3 col-lg-3 mb-2">
                 <div class="card" style="width: 18rem;">
                     <img src="assets/img/tipo-extra.png" class="card-img-top" alt="..." height="200px">
                     <div class="card-body">
@@ -195,7 +195,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-3 col-md-3 col-xs-3 col-lg-3 mb-2">
+            <div class="col-sm-6 col-md-3 col-xs-3 col-lg-3 mb-2">
                 <div class="card" style="width: 18rem;">
                     <img src="assets/img/tipo-vermelho.jpg" class="card-img-top" alt="..." height="200px">
                     <div class="card-body">
@@ -205,7 +205,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-3 col-md-3 col-xs-3 col-lg-3 mb-2">
+            <div class="col-sm-6 col-md-3 col-xs-3 col-lg-3 mb-2">
                 <div class="card" style="width: 18rem;">
                     <img src="assets/img/tipo-codorna.jpg" class="card-img-top" alt="..." height="200px">
                     <div class="card-body">
@@ -226,37 +226,66 @@
                     class="badge badge-dark quicksandbold">Receitas</span>
             </div>
             <div class="col-sm-5 col-xs-5 col-lg-5 col-md-5 cartaoReceita mb-3" style="">
-                <div class="media">
-                    <img src="https://www.galaxcms.com.br/imgs_crud_comum/1826/Lorem-ipsum-dolor-sit-amet-co-20181129184622.jpg"
-                        class="mr-3" alt="..." height="150px" width="200px;">
-                    <div class="media-body">
-                        <h5 class="mt-0">Media heading</h5>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, fugiat numquam nam ducimus aliquid recusandae sit...
-                        <button type="button" class="btn btn-warning w-100 mt-2">Ver mais</button>
+                <div class="widget_receita">
+                    <div class="img_rec">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcR9UTf9v_pSREySddIxG9tdTE8AE_yylVsR-lhf8vVCLgr3Be-y"
+                        class="" alt="..." width="100%">
                     </div>
+                    <div class="text_rec">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    </div>
+                </div>
+                <div class="btn btn-warning w-100">
+                    Ver mais...
                 </div>
             </div>
             <div class="col-sm-5 col-xs-5 col-lg-5 col-md-5 cartaoReceita mb-3" style="">
-                <div class="media">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcR9UTf9v_pSREySddIxG9tdTE8AE_yylVsR-lhf8vVCLgr3Be-y"
-                        class="mr-3" alt="..." height="150px" width="200px;">
-                    <div class="media-body">
-                        <h5 class="mt-0">Media heading</h5>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, fugiat numquam nam ducimus aliquid recusandae sit...
-                        <button type="button" class="btn btn-warning w-100 mt-2">Ver mais</button>
+                <div class="widget_receita">
+                    <div class="img_rec">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcR9UTf9v_pSREySddIxG9tdTE8AE_yylVsR-lhf8vVCLgr3Be-y"
+                        class="" alt="..." width="100%">
                     </div>
+                    <div class="text_rec">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    </div>
+                </div>
+                <div class="btn btn-warning w-100">
+                    Ver mais...
                 </div>
             </div>
         </div>
 
-        <footer class="row">
-            <div class="col-sm-5 col-md-5 col-lg-5 col-xs-5" style="max-height: 140px; padding: 0px;">
-                <img src="assets/img/cartelap.png" height="140px" alt="">
+        <footer class="row pt-3">
+            <div class="col-sm-5 col-md-5 col-lg-5 col-xs-5 pl-2" style="max-height: 140px; padding: 0px; color: white;;">
+                <img src="assets/img/capire.png"" width="180px" alt=""></br>
+                <span><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;ovolar@hotmail.com</span></br>
+                <span><i class="fa fa-phone" aria-hidden="true"></i>&nbsp;(98)981969799</span></br>
+                <span><i class="fa fa-instagram" aria-hidden="true"></i>&nbsp;@ovolar_</span></br>
             </div>
-            <div class="col-sm-7 col-md-7 col-lg-7 col-xs-7">
-                <div style="float: right; color: black;" class="p-5">
-                    <i class="fa fa-phone-square" aria-hidden="true"></i> (98) 3411-3192 | (98) 3551-9999 <br />
-                    <i class="fa fa-location-arrow" aria-hidden="true"></i> Rua 5, Bequimão - São Luís, MA
+            <div class="col-sm-4 col-md-4 col-lg-4 col-xs-4">
+                <div style="float: right; color: white;" class="">
+                    <strong>INFORMAÇÕES</strong></br>
+                    <ul>
+                        <li>Sobre nós</li>
+                        <li>Produtos</li>
+                        <li>Localização</li>
+                        <li>Ovo é Saúde</li>
+                        <li>Cartão fidelidade</li>
+                        <li>Cadastrar-se</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-sm-3 col-xs-3 col-lg-3 col-md-3 text-center">
+                <div style="float: right; color: white;" class="">
+                    <strong>DÚVIDAS E SUPORTE</strong></br>
+                    <ul>
+                        <li>Dúvidas frequentes</li>
+                        <li>Termos de uso</li>
+                        <li>Segurança e privacidade</li>
+                        <li>Trocas e arrependimento</li>
+                        <li>&nbsp;</li>
+                        <li>Cadastrar-se</li>
+                    </ul>
                 </div>
             </div>
             <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12 p-2 text-center"
