alteração no foot

--- a/empresa/sobre.html
+++ b/empresa/sobre.html
@@ -143,22 +143,45 @@
                     &nbsp;
                 </div>
             </div>
-        <footer class="row">
-            <div class="col-sm-5 col-md-5 col-lg-5 col-xs-5" style="max-height: 140px; padding: 0px;">
-                <img src="assets/img/cartelap.png" height="140px" alt="">
-            </div>
-            <div class="col-sm-7 col-md-7 col-lg-7 col-xs-7">
-                <div style="float: right; color: black;" class="p-5">
-                    <i class="fa fa-phone-square" aria-hidden="true"></i> (98) 3411-3192 | (98) 3551-9999 <br />
-                    <i class="fa fa-location-arrow" aria-hidden="true"></i> Rua 5, Bequimão - São Luís, MA
+            <footer class="row pt-3">
+                <div class="col-sm-5 col-md-5 col-lg-5 col-xs-5 pl-2" style="max-height: 140px; padding: 0px; color: white;;">
+                    <img src="assets/img/capire.png"" width="180px" alt=""></br>
+                    <span><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;ovolar@hotmail.com</span></br>
+                    <span><i class="fa fa-phone" aria-hidden="true"></i>&nbsp;(98)981969799</span></br>
+                    <span><i class="fa fa-instagram" aria-hidden="true"></i>&nbsp;@ovolar_</span></br>
                 </div>
-            </div>
-            <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12 p-2 text-center"
-                style="background-color: black; color: gray;">
-                Copyright &copy; 2019 - Ovolar Distribuidora de Ovos - Desenvolvido por Nativo Sistemas - Criação de
-                Sistemas
-            </div>
-        </footer>
+                <div class="col-sm-4 col-md-4 col-lg-4 col-xs-4">
+                    <div style="float: right; color: white;" class="">
+                        <strong>INFORMAÇÕES</strong></br>
+                        <ul>
+                            <li>Sobre nós</li>
+                            <li>Produtos</li>
+                            <li>Localização</li>
+                            <li>Ovo é Saúde</li>
+                            <li>Cartão fidelidade</li>
+                            <li>Cadastrar-se</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-3 col-xs-3 col-lg-3 col-md-3 text-center">
+                    <div style="float: right; color: white;" class="">
+                        <strong>DÚVIDAS E SUPORTE</strong></br>
+                        <ul>
+                            <li>Dúvidas frequentes</li>
+                            <li>Termos de uso</li>
+                            <li>Segurança e privacidade</li>
+                            <li>Trocas e arrependimento</li>
+                            <li>&nbsp;</li>
+                            <li>Cadastrar-se</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12 p-2 text-center"
+                    style="background-color: black; color: gray;">
+                    Copyright &copy; 2019 - Ovolar Distribuidora de Ovos - Desenvolvido por Nativo Sistemas - Criação de
+                    Sistemas
+                </div>
+            </footer>
     </div>
 </body>
 
